# OpenStackClient_Auto-Scaling

./: .coveragerc  .gitignore  .nosetests  .testr.conf  README.md  README.rst  commands.rst  setup.cfg  task.md  test-requirements.txt  todo.md  tox.ini
asclient/common/: __init__.py  display.py  exceptions.py  httpclient.py  i18n.py  manager.py  parser.py  parser_builder.py  parsetypes.py  resource.py  utils.py
asclient/osc/: plugin.py
asclient/osc/v1/: antiddos.py  as_group.py  config.py  desktop.py  desktop_user.py  group.py  instance.py  log.py  parser_builder.py  policy.py  product.py  quota.py  workspace.py
asclient/tests/: base.py  desc_test.py  fakes.py
asclient/tests/common/: test_display.py  test_exceptions.py  test_httpclient.py  test_manager.py  test_resource.py  test_utils.py
asclient/tests/osc/: test_plugin.py
asclient/tests/osc/v1/: test_config.py  test_desktop.py  test_desktop_user.py  test_group.py  test_instance.py  test_log.py  test_policy.py  test_product.py  test_quota.py  test_workspace.py
asclient/tests/~/coverage/: hwclient_common_display_py.html  hwclient_common_exceptions_py.html  hwclient_common_httpclient_py.html  hwclient_common_i18n_py.html  hwclient_common_manager_py.html  hwclient_common_py.html  hwclient_common_resource_py.html  hwclient_common_utils_py.html  hwclient_py.html  index.html  status.json
asclient/v1/: antiddos.py  as_client.py  as_group_mgr.py  as_log_mgr.py  as_policy_mgr.py  as_quota_mgr.py  client.py  config_mgr.py  desktop_mgr.py  desktop_user_mgr.py  group_mgr.py  instance_mgr.py  log_mgr.py  policy_mgr.py  product_mgr.py  quota_mgr.py  resource.py  workspace_mgr.py
asclient/v1/resource/: antiddos.py
tools/: get_coverage_report.sh  hacking.sh
