[metadata]
name = python-asclient
summary = Client Library for HuaWei OpenStack Customer API
description-file = README.rst
author = QianBiao Ng
author-email = xmufive@gmail.com
home-page = http://docs.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developer
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages = asclient

[entry_points]

openstack.cli.extension =
    auto_scaling = asclient.osc.plugin

openstack.auto_scaling.v1 =
    as_group_create = asclient.osc.v1.group:CreateAutoScalingGroup
    as_group_list = asclient.osc.v1.group:ListAutoScalingGroup
    as_config_create = asclient.osc.v1.config:CreateAutoScalingConfig


[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
