[metadata]
name = python-asclient
summary = Client Library for HuaWei OpenStack Customer API
description-file = README.rst
author = QianBiao Ng
author-email = xmufive@gmail.com
home-page = http://docs.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developer
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages = asclient

[entry_points]

openstack.cli.extension =
    auto_scaling = asclient.osc.plugin

openstack.auto_scaling.v1 =
    as_config_create = asclient.osc.v1.config:CreateAutoScalingConfig
    as_config_list = asclient.osc.v1.config:ListAutoScalingConfig
    as_config_show = asclient.osc.v1.config:ShowAutoScalingConfig
    as_config_delete = asclient.osc.v1.config:DeleteAutoScalingConfig

    as_group_create = asclient.osc.v1.group:CreateAutoScalingGroup
    as_group_list = asclient.osc.v1.group:ListAutoScalingGroup
    as_group_show = asclient.osc.v1.group:ShowAutoScalingGroup
    as_group_edit = asclient.osc.v1.group:EditAutoScalingGroup
    as_group_delete = asclient.osc.v1.group:DeleteAutoScalingGroup
    as_group_resume = asclient.osc.v1.group:ResumeAutoScalingGroup
    as_group_pause = asclient.osc.v1.group:PauseAutoScalingGroup



[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
