[metadata]
name = python-asclient
summary = Client Library for HuaWei OpenStack Customer API
description-file = README.rst
author = QianBiao Ng
author-email = xmufive@gmail.com
home-page = http://docs.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developer
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages = asclient

[entry_points]

openstack.cli.extension =
    auto_scaling = asclient.osc.plugin

openstack.auto_scaling.v1 =
    as_config_create = asclient.osc.v1.config:CreateAutoScalingConfig
    as_config_list = asclient.osc.v1.config:ListAutoScalingConfig
    as_config_show = asclient.osc.v1.config:ShowAutoScalingConfig
    as_config_delete = asclient.osc.v1.config:DeleteAutoScalingConfig

    as_group_create = asclient.osc.v1.group:CreateAutoScalingGroup
    as_group_list = asclient.osc.v1.group:ListAutoScalingGroup
    as_group_show = asclient.osc.v1.group:ShowAutoScalingGroup
    as_group_edit = asclient.osc.v1.group:EditAutoScalingGroup
    as_group_delete = asclient.osc.v1.group:DeleteAutoScalingGroup
    as_group_resume = asclient.osc.v1.group:ResumeAutoScalingGroup
    as_group_pause = asclient.osc.v1.group:PauseAutoScalingGroup

    as_policy_create = asclient.osc.v1.policy:CreateAutoScalingPolicy
    as_policy_edit = asclient.osc.v1.policy:EditAutoScalingPolicy
    as_policy_list = asclient.osc.v1.policy:ListAutoScalingPolicy
    as_policy_show = asclient.osc.v1.policy:ShowAutoScalingPolicy
    as_policy_delete = asclient.osc.v1.policy:DeleteAutoScalingPolicy
    as_policy_execute = asclient.osc.v1.policy:ExecuteAutoScalingPolicy
    as_policy_resume = asclient.osc.v1.policy:ResumeAutoScalingPolicy
    as_policy_pause = asclient.osc.v1.policy:PauseAutoScalingPolicy

    as_instance_list = asclient.osc.v1.instance:ListAutoScalingInstance
    as_instance_remove = asclient.osc.v1.instance:RemoveAutoScalingInstance
    as_instance_add = asclient.osc.v1.instance:AddAutoScalingInstance

    as_log_list = asclient.osc.v1.log:ListAutoScalingLog

    as_quota_list = asclient.osc.v1.quota:ListQuota



[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
